--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.38.0
-pandas==2.2.2
-plotly==5.23.0
+streamlit
+pandas
+plotly
 numpy
 openpyxl        # .xlsx 엔진
 xlrd==1.2.0     # .xls 엔진 (2.x부터는 .xls 지원 중단이라 1.2.0 권장)
