--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-plotly
-numpy
-openpyxl        # .xlsx 엔진
+streamlit==1.37.0
+pandas==2.2.2
+plotly==5.24.0
+numpy==1.26.4
+openpyxl==3.1.2 # .xlsx 엔진
 xlrd==1.2.0     # .xls 엔진 (2.x부터는 .xls 지원 중단이라 1.2.0 권장)
